# zalanko

./: README.md
app/backend/: .env.template  .gitignore  README.md  README_BACKEND.md  app.py  image_proxy.py  index_manager.py  pyproject.toml  ragtools.py  requirements.txt  rtmt.py  search_manager.py  setup_intvect.py  virtual_tryon_endpoint.py  virtual_tryon_service.py
app/backend/config/: __init__.py  settings.py
app/backend/exceptions/: __init__.py
app/backend/image_tools/: README.md  download_sample_images.py  image_utils.py  test_image_service.py  update_clothing_data.py  upload_all_products.py  upload_images_simple.py
app/backend/prompts/: __init__.py  system_messages.py
app/backend/services/: __init__.py  search_service.py  virtual_tryon_endpoint.py
app/backend/static/: index.html
app/backend/static/assets/: index-9TpiW75Y.css  index-BockMQkM.js
app/backend/test_gemini/: README.md
app/backend/tests/: __init__.py  test_search_integration.py
app/backend/tests/virtual_tryon_tests/: README.md  vertex_ai_tryon_test.py
app/backend/utils/: __init__.py  logger.py
app/frontend/: .env.template  package-lock.json  package.json
app/frontend/src/: App.tsx  index.css  types.ts
app/frontend/src/components/ui/: ChatInterface.tsx  ListingCard.tsx  (+6 more)
app/frontend/src/hooks/: useProductManagement.ts  useShoppingFeatures.ts  useToolResponseHandler.ts  useVirtualTryOn.ts  useVoiceInterface.ts
app/frontend/src/i18n/: config.ts
app/frontend/src/utils/: colors.ts  pricing.ts
context/: architecture.md
data/: clothing_data.json  clothing_data.json.backup
(+4 files in other folders)
